turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: ')' expected but '}' found.
var rule:Array[Array[Array[Int]]] = Array(Array(Array((1, RIGHT , 1}) (0, LEFT  , 0)), Array((1, RIGHT , 2), (0, NOTURN, 0)), Array((1, LEFT  , 0), (0, LEFT  , 0)))) // Change this
                                                                   ^Turmite:14: error: ';' expected but ')' found.
var rule:Array[Array[Array[Int]]] = Array(Array(Array((1, RIGHT , 1}) (0, LEFT  , 0)), Array((1, RIGHT , 2), (0, NOTURN, 0)), Array((1, LEFT  , 0), (0, LEFT  , 0)))) // Change this
                                                                    ^Turmite:98: error: Unmatched closing brace '}' ignored here
}
^